3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Move ob_apply logic for ARMOUR_IMPROVER objects to the ob_method system.
 include/sproto.h typesproto.h
 server/apply.c ob_types.c
 types/armour_improver
 types/armour_improver/armour_improver.c
 types/legacy/apply.c
 types/Changelog Makefile.am
Nicolas Weeger 2007-06-02

Rename MENU to SHOP_INVENTORY, better match.
Move ob_apply logic for SHOP_INVENTORY objects to the ob_method system.
 common/item.c
 include/define.h typesproto.h
 plugins/cfpython/cfpython.c
 server/shop.c ob_types.c
 types/legacy/apply.c
 types/shop_inventory/shop_inventory.c
 types/ChangeLog
 types/Makefile.am
Nicolas Weeger 2007-06-02

Fix wrong check for object applying.
Move ob_apply logic for LIGHTER objects to the ob_method system.
 include/sproto.h typesproto.h
 server/ob_types.c
 server/apply.c: use METHOD_xxx for test values.
 types/ChangeLog
 types/legacy/apply.c
 types/lighter/lighter.c: added.
Nicolas Weeger 2007-06-02

Remove obsolete oldsocket stuff.
 include/newserver.h sockproto.h sproto.h
 server/commands.c
 socket/info.c loop.c lowlevel.c
Nicolas Weeger 2007-06-02

Fix uninitialized memory / invalid memory access.
 common/arch.c treasure.c
Nicolas Weeger 2007-06-01

Fix bug #1729192: Writing any spellscroll requires positive grace.
 server/skills.c
Nicolas Weeger 2007-06-01

Implement feature request #1724356: logging improvements.
Apply modified patch from Wart.
New settings log_timestamp and log_timestamp_format to control behaviour.
Log player creation.
 common/init.c logger.c
 include/global.h
 lib/settings
 server/c_misc.c init.c
Nicolas Weeger 2007-05-30

Fix bug #1726632: After useing a # of times on the forge..