@@ -15,6 +15,14 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Move ob_apply logic for LAMP objects to the ob_method system.
+ include/typesproto.h
+ server/apply.c ob_types.c
+ types/lamp/lamp.c
+ types/legacy/apply.c
+ types/ChangeLog Makefile.am
+Nicolas Weeger 2007-06-02
+
 Move ob_apply logic for ARMOUR_IMPROVER objects to the ob_method system.
  include/sproto.h typesproto.h
  server/apply.c ob_types.c
